# OpenBachelorM

./: .env  .gitignore  README.md  build-chronosphere.cmd  build-chronosphere_2461.cmd  build-sample-mod.cmd  pyproject.toml  run-fbs-codegen.cmd
fbs/2.4.01/: resource_manifest.fbs
fbs/2.6.91/: activity_table.fbs  buff_table.fbs  char_patch_table.fbs  climb_tower_table.fbs  crisis_v2_table.fbs  display_meta_table.fbs  retro_table.fbs  roguelike_topic_table.fbs  sandbox_perm_table.fbs  token_table.fbs
fbs/2.7.01/: activity_table.fbs  battle_equip_table.fbs  campaign_table.fbs  character_table.fbs  charm_table.fbs  crisis_v2_table.fbs  display_meta_table.fbs  gacha_table.fbs  gamedata_const.fbs  medal_table.fbs  open_server_table.fbs  retro_table.fbs  roguelike_topic_table.fbs  story_review_table.fbs  zone_table.fbs
fbs/2.7.11/: building_data.fbs  climb_tower_table.fbs  skill_table.fbs
fbs/2.7.21/: activity_table.fbs  char_meta_table.fbs  char_patch_table.fbs  checkin_table.fbs  gamedata_const.fbs  mission_table.fbs  open_server_table.fbs  replicate_table.fbs  sandbox_perm_table.fbs  shop_client_table.fbs  uniequip_table.fbs
fbs/2.7.31/: activity_table.fbs  bake_muzzle_data.fbs  buff_table.fbs  building_data.fbs  display_meta_table.fbs  handbook_info_table.fbs  prts___levels.fbs  skin_table.fbs  story_review_meta_table.fbs
fbs/2.7.41/: activity_table.fbs  char_patch_table.fbs  character_table.fbs  climb_tower_table.fbs  cooperate_battle_table.fbs  crisis_table.fbs  display_meta_table.fbs  ep_breakbuff_table.fbs  gamedata_const.fbs  item_table.fbs  retro_table.fbs  sandbox_perm_table.fbs  (+4 more)
test/: test_known_table.py
(+17 files in other folders)
